# skyclip

./: .gitignore  CLAUDE.md  export_code.py  package-lock.json  package.json  skyclip_code_export.md
docs/: SPEC.md
profiles/: action.json  cinematic.json  discovery.json  precision.json  social.json
python/: requirements.txt
python/skyclip_analyzer/: __init__.py  cli.py  color.py  editor.py  motion.py  objects.py  scene.py  semantic.py
src/: App.css  App.tsx  DirectorInput.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyze.rs  director.rs  ingest.rs  mod.rs  visual_analysis.rs
src-tauri/src/models/: clip.rs  flight.rs  mod.rs  segment.rs  telemetry.rs
src-tauri/src/services/: analyzer.rs  database.rs  director.rs  ffmpeg.rs  mod.rs  python_sidecar.rs  scoring.rs  srt_parser.rs
